--- a/07smuml/lab7_final.ipynb
+++ b/07smuml/lab7_final.ipynb
@@ -192,6 +192,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -765,13 +766,7 @@
       "501/501 [==============================] - 0s 266us/step - loss: 0.1361 - acc: 0.4251\n",
       "Epoch 27/100\n",
       "501/501 [==============================] - 0s 268us/step - loss: 0.1411 - acc: 0.3972\n",
-      "Epoch 28/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 28/100\n",
       "501/501 [==============================] - 0s 268us/step - loss: 0.1365 - acc: 0.3972\n",
       "Epoch 29/100\n",
       "501/501 [==============================] - 0s 270us/step - loss: 0.1365 - acc: 0.4471\n",
@@ -1059,13 +1054,7 @@
       "501/501 [==============================] - 18s 37ms/step - loss: 0.0042 - acc: 0.9900 - val_loss: 0.2081 - val_acc: 0.4087\n",
       "Epoch 66/100\n",
       "501/501 [==============================] - 19s 37ms/step - loss: 0.0062 - acc: 0.9760 - val_loss: 0.2024 - val_acc: 0.4008\n",
-      "Epoch 67/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 67/100\n",
       "501/501 [==============================] - 19s 37ms/step - loss: 0.0040 - acc: 0.9860 - val_loss: 0.2060 - val_acc: 0.4048\n",
       "Epoch 68/100\n",
       "501/501 [==============================] - 18s 37ms/step - loss: 0.0079 - acc: 0.9741 - val_loss: 0.2069 - val_acc: 0.4048\n",
@@ -1370,13 +1359,7 @@
       "504/504 [==============================] - 18s 37ms/step - loss: 0.1088 - acc: 0.6131 - val_loss: 0.1382 - val_acc: 0.4458\n",
       "Epoch 12/100\n",
       "504/504 [==============================] - 19s 37ms/step - loss: 0.1001 - acc: 0.6607 - val_loss: 0.1405 - val_acc: 0.3855\n",
-      "Epoch 13/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 13/100\n",
       "504/504 [==============================] - 18s 37ms/step - loss: 0.0966 - acc: 0.6528 - val_loss: 0.1417 - val_acc: 0.4096\n",
       "Epoch 14/100\n",
       "504/504 [==============================] - 18s 36ms/step - loss: 0.0856 - acc: 0.7183 - val_loss: 0.1465 - val_acc: 0.3896\n",
@@ -1647,13 +1630,7 @@
       "504/504 [==============================] - 0s 290us/step - loss: 0.1248 - acc: 0.5060\n",
       "Epoch 43/100\n",
       "504/504 [==============================] - 0s 293us/step - loss: 0.1271 - acc: 0.4921\n",
-      "Epoch 44/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 44/100\n",
       "504/504 [==============================] - 0s 289us/step - loss: 0.1239 - acc: 0.5139\n",
       "Epoch 45/100\n",
       "504/504 [==============================] - 0s 282us/step - loss: 0.1228 - acc: 0.5079\n",
@@ -1800,10 +1777,10 @@
     "    print('fold', i+1, 'cnn1 recall score: ', cnn1_result)\n",
     "    \n",
     "    # architecture 2\n",
-    "    #print('\\ntraining fold', i+1, 'cnn 2')\n",
-    "    #cnn2, cnn2_result = do_ensemble(X_test=X_test, X_train=X_train, y_test=y_test, y_train=y_train_ohe)\n",
-    "    #cnn2_rec.append(cnn2_result)\n",
-    "    #print('fold', i+1, 'cnn2 recall score: ', cnn2_result)\n",
+    "    print('\\ntraining fold', i+1, 'cnn 2')\n",
+    "    cnn2, cnn2_result = do_ensemble(X_test=X_test, X_train=X_train, y_test=y_test, y_train=y_train_ohe)\n",
+    "    cnn2_rec.append(cnn2_result)\n",
+    "    print('fold', i+1, 'cnn2 recall score: ', cnn2_result)\n",
     "        \n",
     "    # MLP\n",
     "    print('\\ntraining fold', i+1, 'mlp')\n",
@@ -1915,8 +1892,8 @@
     }
    ],
    "source": [
-    "#compare_mlp_cnn(cnn1, cnn2, mlp, X_test, y_test, enc)\n",
-    "compare_mlp_cnn(cnn1, None, mlp, X_test, y_test, enc)"
+    "compare_mlp_cnn(cnn1, cnn2, mlp, X_test, y_test, enc)\n",
+    "#compare_mlp_cnn(cnn1, None, mlp, X_test, y_test, enc)"
    ]
   },
   {
@@ -1969,8 +1946,8 @@
     "mean_tpr = 0.0\n",
     "mean_fpr = np.linspace(0, 1, 100)\n",
     "\n",
-    "#for arch in ['mlp', 'cnn1', 'cnn2']:\n",
-    "for arch in ['mlp', 'cnn1']:\n",
+    "for arch in ['mlp', 'cnn1', 'cnn2']:\n",
+    "#for arch in ['mlp', 'cnn1']:\n",
     "    probas = eval('probas_'+arch)\n",
     "    perclass_mean_tpr = 0.0\n",
     "    roc_auc = 0\n",
@@ -1995,32 +1972,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(753, 16384)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## With more data\n",
     "\n",
-    "Now we'll us"
+    "Now we'll use the ImageDataGenerator from keras to expand our dataset to see if we can improve the general performance of the simple cnn model.  The datagenerator will add random noise to the images and expand the size of our "
    ]
   },
   {
@@ -2215,7 +2172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2229,7 +2186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
