--- a/07smuml/lab7_final.ipynb
+++ b/07smuml/lab7_final.ipynb
@@ -199,6 +199,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -669,13 +670,7 @@
       "552/552 [==============================] - 0s 287us/step - loss: 0.1034 - acc: 0.6051\n",
       "Epoch 57/100\n",
       "552/552 [==============================] - 0s 289us/step - loss: 0.0984 - acc: 0.6196\n",
-      "Epoch 58/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/100\n",
       "552/552 [==============================] - 0s 282us/step - loss: 0.1000 - acc: 0.6250\n",
       "Epoch 59/100\n",
       "552/552 [==============================] - 0s 285us/step - loss: 0.0920 - acc: 0.6522\n",
@@ -1009,13 +1004,7 @@
       "553/553 [==============================] - 0s 273us/step - loss: 0.0882 - acc: 0.6637\n",
       "Epoch 96/100\n",
       "553/553 [==============================] - 0s 274us/step - loss: 0.0947 - acc: 0.6564\n",
-      "Epoch 97/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 97/100\n",
       "553/553 [==============================] - 0s 273us/step - loss: 0.0889 - acc: 0.6817\n",
       "Epoch 98/100\n",
       "553/553 [==============================] - 0s 276us/step - loss: 0.0988 - acc: 0.6365\n",
@@ -1362,7 +1351,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also look at the confusion matrix for the final instance of each of the architecture's"
+    "It looks like the simple architecture performed the best, its over two standard deviations greater than either of the other two models.  And with a standard deviation of only 2% we can assume this is about how well it would perform once deployed.  The overall recall score of 53% isn't great, but it actually lines up pretty well with these published results:\n",
+    "http://vision.stanford.edu/aditya86/ImageNetDogs/\n",
+    "granted we are looking at only 5 classes, but we're also probably not training nearly as long.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also look at the confusion matrix for the final instance of each of the architecture's, to see where its getting things right and wrong."
    ]
   },
   {
@@ -1412,6 +1410,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\*for some reason the ensemble net is not playing nicely with the following visualizations so we'll skip them, but the above results indicate that it didn't perform much better than the standard multi-level perceptron.\\*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -1436,7 +1441,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also look at the ROC curve for each architecture.  Again, we'll just use the last fold, but assuming that the standard deviation on the cross-validation is small it should give a fairly good estimation. "
+    "You can see that both networks do pretty well at identifying the mastiff, which makes sense as it is pretty unique looking among these 5 breeds in terms of its size, coloring, and coat style.  For both architectures the model correctly identified the breed the majority of the time, although the cnn did better on 4/5 of the breeds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also look at the ROC curve for each architecture.  Again, we'll just use the last fold, but since the standard deviation on the cross-validation is small it should give a fairly good estimation.  The roc interpolates trade off between false positives and true positives, while the area under the curve gives a pretty good estimation of the general performance of the model--the closer it is to 1, the better the model performs."
    ]
   },
   {
@@ -1508,23 +1520,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(831, 16384)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "X.shape"
+    "\\*the ensemble net doesn't play nice with this function because it uses the functional model and doesn't implement the `predict_proba` function\\*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that again the cnn1 edges out slightly the mlp:  it has a higher AUC and the ROC is uniformly above the mlp's curve."
    ]
   },
   {
@@ -1533,7 +1539,7 @@
    "source": [
     "## With more data\n",
     "\n",
-    "Now we'll us"
+    "Now we'll use the `ImageDataGenerator` module as part of Keras to exand the dataset using our top performing architecture.  The data expansion should do two things, 1) improve the training of the model by simply providing more data, and 2) imporve generaliztion performance, because the generator introduces noise into the system that acts as a regularization technique."
    ]
   },
   {
@@ -1544,8 +1550,7 @@
    },
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.preprocessing.image import ImageDataGenerator\n"
    ]
   },
   {
@@ -1578,6 +1583,13 @@
     "    horizontal_flip=False,\n",
     "    vertical_flip=False,\n",
     "    rescale=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to redefine some of our functions to work with the generator."
    ]
   },
   {
@@ -1727,13 +1739,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The overall performance actually went down, but not by two much.  We didn't run this in a cross-validation loop so we can't be sure wether this is a general result or not, but its within 2 std of the previous result so it very well could be."
+   ]
   },
   {
    "cell_type": "code",
@@ -1747,7 +1759,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1761,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
