--- a/06smuml/Lab6.ipynb
+++ b/06smuml/Lab6.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -708,7 +717,9 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import some keras stuff\n",
@@ -944,6 +955,7 @@
    "cell_type": "code",
    "execution_count": 348,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1152,7 +1164,9 @@
   {
    "cell_type": "code",
    "execution_count": 351,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from copy import copy, deepcopy\n",
@@ -1163,7 +1177,9 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "inp = Input(shape=(X_train.shape[1],),sparse=False)\n",
