change from testing gparameters

--- a/08smuml/lab8.ipynb
+++ b/08smuml/lab8.ipynb
@@ -646,11 +646,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN stuff\n",
+    "## RNN Architectures\n",
     "\n",
     "Okay now our data is ready to use for in the rnn.\n",
     "\n",
-    "We'll design two networks one using a LSTM cell and one using a GRU.  For each of them we'll try a few different hyper parameters first on each of them to see if we can find the best architecture.  After that we'll do a cross validation loop of five iterations on an 80/20 train/test split to evaluate the general performance\n",
+    "We'll design two networks one using a LSTM cell and one using a GRU.  For each of them we'll try a few different hyper parameters first on each of them to see if we can find the best architecture.  After that we'll do a cross validation using a 5-fold split.\n",
     "\n",
     "The parameters we'll investigate are dropout/recurrent_dropout (we'll move these together as one variable) and the output dimension of the RNN cell.\n",
     "\n",
@@ -669,6 +669,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# hyper parameters\n",
+    "dropout_rates = [0.0, 0.2, 0.6]\n",
+    "latent_dims = [20, 30, 50]\n",
+    "\n",
+    "# for testing\n",
+    "#dropout_rates = [0.2]\n",
+    "#latent_dims = [50]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 134,
    "metadata": {
     "scrolled": true
@@ -682,8 +699,8 @@
     "\n",
     "EMBED_SIZE = 50\n",
     "\n",
-    "#archs = ['LSTM', 'GRU']\n",
-    "archs = ['LSTM']\n",
+    "archs = ['LSTM', 'GRU']\n",
+    "#archs = ['LSTM'] # for testing\n",
     "\n",
     "dropout = dropout_rates[0]\n",
     "latent_dim = latent_dims[0]\n",
@@ -694,22 +711,6 @@
     "                         input_length=MAX_ART_LEN, name='embed')(input_holder)\n",
     "\n",
     "            \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# hyper parameters\n",
-    "#dropout_rates = [0.0, 0.2, 0.6]\n",
-    "#latent_dims = [20, 30, 50]\n",
-    "\n",
-    "dropout_rates = [0.2]\n",
-    "latent_dims = [50]"
    ]
   },
   {
@@ -912,7 +913,7 @@
    "source": [
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
-    "NUM_SPLITS = 2\n",
+    "NUM_SPLITS = 5\n",
     "skf = StratifiedKFold(NUM_SPLITS, shuffle=False)\n",
     "\n",
     "cv_acc = []\n",
@@ -924,33 +925,12 @@
     "    y_test = keras.utils.to_categorical(y[test])\n",
     "    \n",
     "    print('\\n\\nCV ', i+1)\n",
-    "    best_model.fit(X_train, y_train, batch_size=100, epochs=1, validation_data=[X_test, y_test])\n",
+    "    best_model.fit(X_train, y_train, batch_size=100, epochs=3, validation_data=[X_test, y_test])\n",
     "    \n",
     "    yhat = np.round(rnn[0].predict(X_test))\n",
     "    acc = mt.accuracy_score(yhat, y_test)\n",
     "    cv_acc.append(acc)\n",
     "   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0.72371051579368251, ('LSTM', 0.2, 50)),\n",
-       " (0.69707883153261307, ('LSTM', 0.2, 50))]"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv_acc"
    ]
   },
   {
